--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pizzaria-santa-sensação",
+  "name": "site-top-pizzaria-santa-sensação",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "firebase": "^12.3.0",
+    "sortablejs": "^1.15.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
